# mixer

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
deploy/: api.Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: index.tsx
frontend/src/features/mixer/api/: getTest.ts
frontend/src/features/mixer/components/: Controller.tsx  Tracklist.tsx  Waveform.tsx
frontend/src/features/mixer/routes/: Mixer.tsx  index.ts
frontend/src/features/mixer/stores/: testSlice.ts
frontend/src/features/mixer/types/: index.ts
frontend/src/features/tracks/components/: TestComponent.tsx
frontend/src/features/tracks/routes/: Tracks.tsx
frontend/src/providers/: app.tsx
frontend/src/routes/: index.tsx
frontend/src/stores/: store.ts
mixer/: logger.py  main.py  mix.py  sync.py  track.py
mixer/api/: main.py  minio_client.py
mixer/api/crud/: crud_mix.py  crud_track.py
mixer/api/models/: __init__.py  mix.py  track.py
mixer/api/routers/: mix.py  track.py
mixer/api/schemas/: __init__.py  mix.py  track.py
mixer/processors/: mix.py  sync.py  track.py
mixer/routers/: upload.py
