[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mixer"
version = "0.0.1"
description = "DJ mixer"
authors = [ "Joseph Smith <joesmith29@hotmail.co.uk>",]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pre-commit = "^3.1.1"
mypy = "^1.1.1"
