[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mixer"
version = "0.0.1"
description = "DJ mixer"
authors = ["Joseph Smith <joesmith29@hotmail.co.uk>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
essentia = "2.1b6.dev1034"
pyrubberband = "0.3.0"
numpy = "1.26.0"
pysoundfile = "0.9.0.post1"
madmom = { git = "https://github.com/CPJKU/madmom" }
fastapi = "^0.104.1"
hypercorn = "^0.15.0"
minio = "^7.1.17"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.22"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pre-commit = "^3.1.1"
mypy = "^1.1.1"
matplotlib = "^3.8.0"
